pequeña modificacion de index

--- a/src/main/webapp/navigationbar.xhtml
+++ b/src/main/webapp/navigationbar.xhtml
@@ -9,10 +9,6 @@
 	<link rel="stylesheet" type="text/css" href="#{request.contextPath}/resources/css/default.css" />
 </h:head>
 <h:body>
-	<h3>Bienvenido <h:outputText value="#{security.login}" /></h3>
-	<link href="navigationbar.xhtml" rel="import" /> 
-	<h:outputText rendered="#{security.hasRole('ROLE_ADMIN')}" value="Tiene privilegios de administrador." />
-	<br /><br />
-	<a href="#{request.contextPath}/logout">Cerrar sesión</a>
+	<h2>Puta prueba</h2>
 </h:body>
 </html>
