Botones de navegacion + fa icons

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -14,5 +14,10 @@
 	<h:outputText rendered="#{security.hasRole('ROLE_ADMIN')}" value="Tiene privilegios de administrador." />
 	<br /><br />
 	<a href="#{request.contextPath}/logout">Cerrar sesión</a>
+			<p:button value="Añadir usuario"  outcome="altaUsuario.xhtml" icon="fa fa-user-circle" />
+			<p:button value="Añadir tarea" outcome="altaTareas.xhtml"  icon="fa fa-list"/>
+			<p:button value="Asignar rol" outcome="asignarRol.xhtml" icon=" fa fa-trash " />
+			<p:button value="Logout" href="/logout"  icon="fa fa-sign-out" />
+			<p:button value="Editar" oncomplete="" icon="fa fa-edit"/>
 </h:body>
 </html>
