modificacion en las vistas

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -16,5 +16,7 @@
 	<h:outputText rendered="#{security.hasRole('ROLE_ADMIN')}" value="Tiene privilegios de administrador." />
 	<br /><br />
 	
+	        <ui:include src="adduser.xhtml" />
+	
 </h:body>
 </html>
