--- a/src/main/webapp/navigationbar.xhtml
+++ b/src/main/webapp/navigationbar.xhtml
@@ -4,11 +4,11 @@
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui">
 	<h2>Include page</h2>
-	<p:button value="Añadir usuario"  rendered="#{security.hasRole('ROLE_MAN')}" outcome="altaUsuario.xhtml"
+	<p:button value="Añadir usuario"  rendered="#{security.hasRole('ROLE_MAN')}" outcome="/man/altaUsuario.xhtml"
 		icon="fa fa-user-circle" />
 	<p:button value="Gestionar tareas" outcome="altaTareas.xhtml"
 		icon="fa fa-list" />
-	<p:button value="Asignar rol" rendered="#{security.hasRole('ROLE_MAN')}" outcome="asignarRol.xhtml"
+	<p:button value="Asignar rol" rendered="#{security.hasRole('ROLE_MAN')}" outcome="/man/asignarRol.xhtml"
 		icon=" fa fa-trash " />
 	<p:button value="Cerrar sesión" href="/logout" icon="fa fa-sign-out" />
 </ui:composition>
