--- a/src/main/webapp/man/altaUsuario.xhtml
+++ b/src/main/webapp/man/altaUsuario.xhtml
@@ -2,6 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
 	xmlns:p="http://primefaces.org/ui">
 <h:head>
 	<title>Nueva alta</title>
@@ -32,6 +34,26 @@
 			actionListener="#{usuarioBean.registrar}" ajax="false"
 			icon="fa fa-save" />
 	</h:form>
+	
+	<p:dataTable id="usuarios" var="usuario" value="#{usuarioBean.listaUsuarios}">
+		<p:column headerText="Login">
+			<h:outputText value="#{usuario.login}" />
+		</p:column>
+		<p:column headerText="Nombre">
+			<h:outputText value="#{usuario.nombre}" />
+		</p:column>
+		<p:column headerText="Rol">
+			<p:repeat value="#{usuario.roles}" var="str" varStatus="status">
+				#{str.nombre}#{status.last?'':', '}
+			</p:repeat>
+		</p:column>
+
+
+		<f:facet name="footer">
+		        En total hay #{fn:length(usuarioBean.listaUsuarios)} usuarios.
+		    </f:facet>
+
+	</p:dataTable>
 
 </h:body>
 </html>
