--- a/src/main/webapp/man/asignarRol.xhtml
+++ b/src/main/webapp/man/asignarRol.xhtml
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui">
 <h:head>
 	<title>Nueva alta</title>
@@ -9,6 +10,7 @@
 	<link rel="stylesheet" type="text/css"
 		href="#{request.contextPath}/resources/css/default.css" />
 </h:head>
+<ui:include src="../navigationbar.xhtml" />
 <h:body>
 	<h3>
 		Usuario:
