--- a/src/main/webapp/man/manageusers.xhtml
+++ b/src/main/webapp/man/manageusers.xhtml
@@ -32,26 +32,31 @@
 			icon="fa fa-save" />
 	</h:form>
 
-	<p:dataTable id="usuarios" var="usuario"
-		value="#{usuarioBean.listaUsuarios}">
-		<p:column headerText="Login">
-			<h:outputText value="#{usuario.login}" />
-		</p:column>
-		<p:column headerText="Nombre">
-			<h:outputText value="#{usuario.nombre}" />
-		</p:column>
-		<p:column headerText="Rol">
-			<p:repeat value="#{usuario.roles}" var="str" varStatus="status">
+	<h:form id="id">
+		<p:dataTable id="usuarios" var="usuario"
+			value="#{usuarioBean.listaUsuarios}">
+			<p:column headerText="Login">
+				<h:outputText value="#{usuario.login}" />
+			</p:column>
+			<p:column headerText="Nombre">
+				<h:outputText value="#{usuario.nombre}" />
+			</p:column>
+			<p:column headerText="Rol">
+				<p:repeat value="#{usuario.roles}" var="str" varStatus="status">
 				#{str.nombre}#{status.last?'':', '}
 			</p:repeat>
-		</p:column>
+			</p:column>
+			<p:column headerText="Editar / Borrar">
+				<p:commandButton icon="ui-icon-trash" title="Borrar"
+					actionListener="#{usuarioBean.eliminar(usuario)}" ajax="false" />
+			</p:column>
 
-
-		<f:facet name="footer">
+			<f:facet name="footer">
 		        En total hay #{fn:length(usuarioBean.listaUsuarios)} usuarios.
 		    </f:facet>
 
-	</p:dataTable>
+		</p:dataTable>
+	</h:form>
 
 </h:body>
 </html>
