modificacion de css y header

--- a/src/main/webapp/man/managerol.xhtml
+++ b/src/main/webapp/man/managerol.xhtml
@@ -12,7 +12,7 @@
 </h:head>
 <ui:include src="/navigationbar.xhtml" />
 <h:body>
-	<h1>Alta a nuevo usuario</h1>
+	<h1>Gestión de roles</h1>
 	<h:form>
 		<h:panelGrid columns="2" cellpadding="3">
 
