--- a/src/main/webapp/man/manageusers.xhtml
+++ b/src/main/webapp/man/manageusers.xhtml
@@ -6,14 +6,14 @@
 	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
 	xmlns:p="http://primefaces.org/ui">
 <h:head>
-	<title>Nueva alta</title>
+	<title>Gestión de usuarios</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link rel="stylesheet" type="text/css"
 		href="#{request.contextPath}/resources/css/default.css" />
 </h:head>
 <ui:include src="/navigationbar.xhtml" />
 <h:body onload="#{usuarioBean.list()}">
-	<h1>Alta a nuevo usuario</h1>
+	<h1>Gestión de usuarios</h1>
 	<h:form>
 		<h:panelGrid columns="2" cellpadding="3">
 			<p:outputLabel for="login" value="Nombre de usuario" />
@@ -46,7 +46,10 @@
 				#{str.nombre}#{status.last?'':', '}
 			</p:repeat>
 			</p:column>
+
 			<p:column headerText="Editar / Borrar">
+				<p:commandButton icon="ui-icon-pencil" title="Editar"
+					actionListener="#{usuarioBean.eliminar(usuario)}" ajax="false" />
 				<p:commandButton icon="ui-icon-trash" title="Borrar"
 					actionListener="#{usuarioBean.eliminar(usuario)}" ajax="false" />
 			</p:column>
