--- a/src/main/webapp/addUser.xhtml
+++ b/src/main/webapp/addUser.xhtml
@@ -4,7 +4,8 @@
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui">
 
-	<p:commandButton value="Añadir usuario" oncomplete="PF('addUserDialog').show()" icon="fa fa-edit"/>
+	<p:commandButton value="Añadir usuario"
+		oncomplete="PF('addUserDialog').show()" icon="fa fa-edit" />
 
 	<p:dialog id="addUserDialog" widgetVar="addUserDialog"
 		header="Introduce los datos del usuario" resizable="false">
@@ -19,20 +20,20 @@
 
 				<p:outputLabel for="nombre" value="Nombre" />
 				<p:inputText id="nombre" value="#{usuarioBean.nombre}" />
+
+
+				<h:outputLabel for="rol" value="Rol" />
+				<p:selectOneMenu id="rol" value="#{usuarioBean.rol}"
+					style="width:125px">
+					<f:selectItem itemLabel="Usuario" itemValue="ROLE_USER" />
+					<f:selectItem itemLabel="Administrador" itemValue="ROLE_ADMIN" />
+					<f:selectItem itemLabel="Gestor" itemValue="ROLE_MAN" />
+				</p:selectOneMenu>
 			</h:panelGrid>
 			<br />
 
-			<h:outputLabel for="rol" value="Rol" />
-
-			<p:selectOneMenu id="rol" value="#{usuarioBean.rol}"
-				style="width:125px">
-				<f:selectItem itemLabel="Usuario" itemValue="ROLE_USER" />
-				<f:selectItem itemLabel="Administrador" itemValue="ROLE_ADMIN" />
-				<f:selectItem itemLabel="Gestor" itemValue="ROLE_MAN" />
-			</p:selectOneMenu>
-
 			<p:commandButton value="Guardar" id="nonAjax"
-				actionListener="#{usuarioBean.userNRoll}" ajax="false"
+				actionListener="#{usuarioBean.registrar}" ajax="false"
 				icon="fa fa-save" />
 		</h:form>
 	</p:dialog>
