implementacion semidefinitiva del alta de usuarios y asignacion de rol

--- a/src/main/webapp/navigationbar.xhtml
+++ b/src/main/webapp/navigationbar.xhtml
@@ -20,5 +20,7 @@
 	<h3>
 		Usuario:
 		<h:outputText id="user" value="#{security.login}" />
+		<h:outputText rendered="#{security.hasRole('ROLE_ADMIN')}"
+			value=" -> Administrador." />
 	</h3>
 </ui:composition>
