cambio en el diseño y cambio de lugar de algunos archivos

--- a/src/main/webapp/man/manageusers.xhtml
+++ b/src/main/webapp/man/manageusers.xhtml
@@ -14,7 +14,8 @@
 <ui:include src="/navigationbar.xhtml" />
 <h:body onload="#{usuarioBean.list()}">
 	<h1>Gestión de usuarios</h1>
-	<ui:include src="/addUser.xhtml" />
+	<ui:include src="/man/addUser.xhtml" />
+	<ui:include src="/rolemod.xhtml" />
 
 	<h:form id="id">
 		<p:dataTable id="usuarios" var="usuario"
