--- a/src/main/webapp/rolemod.xhtml
+++ b/src/main/webapp/rolemod.xhtml
@@ -1,20 +1,14 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui">
-<h:head>
-	<title>Nueva alta</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<link rel="stylesheet" type="text/css"
-		href="#{request.contextPath}/resources/css/default.css" />
-</h:head>
-<ui:include src="/navigationbar.xhtml" />
-<h:body>
-	<h1>Gestión de roles</h1>
 
-	<div class="center">
+	<p:commandButton value="Cambiar rol"
+		oncomplete="PF('rolemodDialog').show()" icon="fa fa-edit" />
+
+	<p:dialog id="rolemodDialog" widgetVar="rolemodDialog"
+		header="Cambio de rol" resizable="false">
 		<h:form>
 			<h:panelGrid columns="2" cellpadding="3">
 
@@ -34,11 +28,10 @@
 			</h:panelGrid>
 			<br />
 			<p:growl id="growl" life="2000" />
-			<p:commandButton value="Guardar" id="nonAjax"
+			<p:commandButton value="Cambiar" id="nonAjax"
 				actionListener="#{usuarioBean.asignarRol}" ajax="false"
 				icon="fa fa-save" />
 		</h:form>
-	</div>
+	</p:dialog>
 
-</h:body>
-</html>
+</ui:composition>
