implementacion de cambio de contraseña

--- a/src/main/webapp/man/addUser.xhtml
+++ b/src/main/webapp/man/addUser.xhtml
@@ -5,7 +5,7 @@
 	xmlns:p="http://primefaces.org/ui">
 
 	<p:commandButton value="Añadir usuario"
-		oncomplete="PF('addUserDialog').show()" icon="fa fa-edit" />
+		oncomplete="PF('addUserDialog').show()" icon="fa fa-plus-circle" />
 
 	<p:dialog id="addUserDialog" widgetVar="addUserDialog"
 		header="Introduce los datos del usuario" resizable="false">
