--- a/src/main/webapp/man/manageusers.xhtml
+++ b/src/main/webapp/man/manageusers.xhtml
@@ -15,7 +15,8 @@
 <h:body onload="#{usuarioBean.list()}">
 	<h1>Gestión de usuarios</h1>
 	<ui:include src="/man/addUser.xhtml" />
-	<ui:include src="/rolemod.xhtml" />
+	<ui:include src="/man/rolemod.xhtml" />
+	<ui:include src="/man/changepassword.xhtml" />
 
 	<h:form id="id">
 		<p:dataTable id="usuarios" var="usuario"
