pequeña modificacion en los dialogos

--- a/src/main/webapp/man/addUser.xhtml
+++ b/src/main/webapp/man/addUser.xhtml
@@ -8,7 +8,7 @@
 		oncomplete="PF('addUserDialog').show()" icon="fa fa-plus-circle" />
 
 	<p:dialog id="addUserDialog" widgetVar="addUserDialog"
-		header="Introduce los datos del usuario" resizable="false">
+		header="Introduce los datos del usuario" resizable="false" modal="true">
 		<h:form>
 			<h:panelGrid columns="2" cellpadding="3">
 				<p:outputLabel for="login" value="Nombre de usuario" />
