--- a/src/main/webapp/man/changepassword.xhtml
+++ b/src/main/webapp/man/changepassword.xhtml
@@ -8,7 +8,7 @@
 		oncomplete="PF('changepasswordDialog').show()" icon="fa fa-edit" />
 
 	<p:dialog id="changepasswordDialog" widgetVar="changepasswordDialog"
-		header="Elija una contraseña" resizable="false">
+		header="Elija una contraseña" resizable="false" modal="true">
 		<h:form>
 			<h:panelGrid columns="2" cellpadding="3">
 
