--- a/src/main/webapp/man/rolemod.xhtml
+++ b/src/main/webapp/man/rolemod.xhtml
@@ -8,7 +8,7 @@
 		oncomplete="PF('rolemodDialog').show()" icon="fa fa-edit" />
 
 	<p:dialog id="rolemodDialog" widgetVar="rolemodDialog"
-		header="Cambio de rol" resizable="false">
+		header="Cambio de rol" resizable="false" modal="true">
 		<h:form>
 			<h:panelGrid columns="2" cellpadding="3">
 
